Minor spacing fixes in CSS stylesheet

--- a/src/RPPDb/RieselBundle/Resources/public/css/riesel.css
+++ b/src/RPPDb/RieselBundle/Resources/public/css/riesel.css
@@ -10,10 +10,10 @@
 }
 
 .twin {
-	background-color:#ff9900;
+	background-color: #ff9900;
 }
 
 .comment {
-	color:#ff0000;
-	cursor:pointer
+	color: #ff0000;
+	cursor: pointer;
 }
